<resources>
    <string name="ADDED">ADDED</string>
    <string name="Distributor">Distributor :</string>
    <string name="Leaderboard">Leaderboard</string>
    <string name="Okay">Okay</string>
    <string name="Processed_with_new_number">Proceed with new number</string>
    <string name="Reason">Reason :</string>
    <string name="WhatsAppOptin">WhatsApp Opt-in</string>
    <string name="_0">0</string>
    <string name="_00">00</string>
    <string name="_0kbps">0 kbps</string>
    <string name="_1000">1000</string>
    <string name="_91">+91</string>
    <string name="aaadhar_number">Aadhaar number</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept">Accept</string>
    <string name="accept_tnc">I accept all the above Terms &amp; Condition</string>
    <string name="ach_val">Ach: %1$s</string>
    <string name="achievement">Achievement:</string>
    <string name="achievement_new">Achievement</string>
    <string name="action_point">Action Point</string>
    <string name="action_settings">Settings</string>
    <string name="active_orders">Active Orders</string>
    <string name="add">ADD</string>
    <string name="add_all">Add all</string>
    <string name="add_all_to_cart">Add all to cart</string>
    <string name="add_beneficiary">ADD BENEFICIARY</string>
    <string name="add_best_deal"><u>Add</u></string>
    <string name="add_counterfeit">Add Counterfeit Product</string>
    <string name="add_item">Add Item</string>
    <string name="add_items_count">All %1$s item(s) will be added to the cart</string>
    <string name="add_items_now">Add items to it now.</string>
    <string name="add_items_to_it_now">Add items to it now</string>
    <string name="add_product">Add Product</string>
    <string name="add_product_by_search_or_scan_barcode">Add Product by Search or Scan barcode</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="add_to_cart_">+ Add</string>
    <string name="add_to_cart_increment">+ Add</string>
    <string name="add_to_cart_new">Add To Cart</string>
    <string name="add_visitor_details">Add Visitor Details</string>
    <string name="added_to_cart">Added to Cart</string>
    <string name="adding_to_cart">Adding to cart</string>
    <string name="additional_details">Additional details</string>
    <string name="additional_disc">Additional Discount</string>
    <string name="address">Address</string>
    <string name="address1_heading">Address-1</string>
    <string name="address2_heading">Address-2</string>
    <string name="address3_heading">Address-3</string>
    <string name="address_details">Address Details</string>
    <string name="address_validation">ABCDEFGHIJKLMNOPQRSTUVWXYZ #%abcdefghijklmnopqrstuvwxyz0123456789&amp;*()+,.</string>
    <string name="adj_date">Adj. Date</string>
    <string name="adj_invoice">Adjusted Invoice:</string>
    <string name="adj_invoice_no">Adj. Invoice No</string>
    <string name="adj_points">Adj. Points</string>
    <string name="adjust_points">Ushop points is accepted. Discount will be applied in your next bill</string>
    <string name="adjusted_on">"Adjusted on: "</string>
    <string name="advance_payment">Advance Payment</string>
    <string name="al_ready_added">already added</string>
    <string name="alert">Alert</string>
    <string name="alert_hul_served">"If you are currently servicd by a HUL distributor, please use the Store ID mentioned in HUL Distributor bill to Log-in.

Do you want to exit?"</string>
    <string name="all">All</string>
    <string name="all_brands">All Brands</string>
    <string name="all_categories">All Categories</string>
    <string name="all_offers">All Offers</string>
    <string name="all_topics">All Topics</string>
    <string name="allotted_0">Total : %1$s</string>
    <string name="allowed_only_alphabets">ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz</string>
    <string name="allowed_only_alphanumaric">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789</string>
    <string name="allowed_only_alphanumaric_custom">ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz0123456789</string>
    <string name="allowed_only_numbers">0123456789</string>
    <string name="alloweddigits">"ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789-~`!@#$%^&amp;*()-_+={}[]|/:;'\",.?>&lt;"</string>
    <string name="alt_contact_person">Alternate Contact Person</string>
    <string name="alternate_mbile_heading">Alternate Mobile</string>
    <string name="amount">"Amount : "</string>
    <string name="amount_paid">Amount Paid :</string>
    <string name="amount_paidd">Amount Paid</string>
    <string name="amount_to_pay">Amount To Pay</string>
    <string name="amt_greater_pend">Amount entered cannot be more than pending amount. Please enter a valid amount</string>
    <string name="amt_morethan_zero">Amount should be greater than zero</string>
    <string name="and_get_access_to_exciting_offers_on_your_favourite_brands">"and get access to exciting offers on your favourite brands
"</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="api_accept_privacy">version_info/%1$s/update_accept_privacypolicy</string>
    <string name="api_accept_terms">version_info/%1$s/update_accept_terms</string>
    <string name="api_add_moreinfo">shikhar_login/add_moreinfo</string>
    <string name="api_addall_smartlist">shikhar_new/smartlist_add_all</string>
    <string name="api_altphone_get_otp_url">send_otp_altphone</string>
    <string name="api_altphone_verify_otp_url">verify_otp_altphone_enc</string>
    <string name="api_ba_daily_off_take">batester/daily_offtake</string>
    <string name="api_ba_daily_off_take_moc_list">batester/moc_list</string>
    <string name="api_ba_feedback_brands">batester/feedback_brands</string>
    <string name="api_ba_feedback_task">batester/ba_feedback_task</string>
    <string name="api_banner_basepack_url">shikhar_new/%1$s/banner_product_details_109</string>
    <string name="api_barcode_url">products/get_bar_code_new_ui_v8_2</string>
    <string name="api_batester_amc_complaint">batester/amc_complaint</string>
    <string name="api_batester_amc_elements">batester/amc_elements</string>
    <string name="api_batester_amc_summary">batester/amc_summary</string>
    <string name="api_booster_api">booster</string>
    <string name="api_brands">/brands</string>
    <string name="api_cancel_order">/remove</string>
    <string name="api_cancel_order_new">/cancel_order</string>
    <string name="api_cart">carts/</string>
    <string name="api_cart_api">/add_to_cart_new_ui</string>
    <string name="api_cart_update">/add_product_to_cart</string>
    <string name="api_categories">/categories_v5_9</string>
    <string name="api_check_dse_policy_basepack_url">check_dse_policy_basepack</string>
    <string name="api_check_login_otp">shikhar_login/check_login_otp</string>
    <string name="api_check_storeid">shikhar_login/check_storeid</string>
    <string name="api_check_storeid_info_new">/info_new</string>
    <string name="api_check_storeid_url">/info</string>
    <string name="api_claims">claims/</string>
    <string name="api_claims_list">/list</string>
    <string name="api_clear_cart_url">/carts/clear_hul_cart</string>
    <string name="api_combined_category_search_url">products/%1$s/%2$s/category_search_key_new</string>
    <string name="attendance_task">Multiple Attendance</string>
    <string name="change_password">Change Password</string>
    <string name="choose_type_of_reedemption">Choose Type of Reedemption</string>
    <string name="collection_summary">Collection Summary</string>
    <string name="counterfiet">Counterfeit</string>
    <string name="current_bill">CURRENT BILL</string>
    <string name="custom_progress_dialog">(Quantity)(UNITS/DOZEN/CLD)(Product Description)</string>
    <string name="custom_progress_dialog_example_text">Eg -5 Dozen Dove Shampoo/5 Units Dove Shampoo</string>
    <string name="do_you_want_optin">Receive order and account related updates on WhatsApp</string>
    <string name="enter_name">Enter Name</string>
    <string name="feedback">Feedback</string>
    <string name="format_to_speak">Format to Speak</string>
    <string name="from">From</string>
    <string name="help_line">Help Line</string>
    <string name="iteams">I-Teams</string>
    <string name="landscape">LANDSCAPE</string>
    <string name="lbl_cancel_order">CANCEL ORDER</string>
    <string name="listening">Listening...</string>
    <string name="logout">Logout</string>
    <string name="me_id_hint">Enter the SMN Code</string>
    <string name="me_text">Please enter field executive details</string>
    <string name="menu">Menu</string>
    <string name="mission">Mission</string>
    <string name="my_orders">Orders</string>
    <string name="name">Name</string>
    <string name="next_bill">NEXT BILL</string>
    <string name="ok">OK</string>
    <string name="outlet_creation">New Store Creation</string>
    <string name="paathshaala">Paathshaala</string>
    <string name="portrait">PORTRAIT</string>
    <string name="reorder">Reorder</string>
    <string name="reports">Reports</string>
    <string name="sales_summary">"Today's Sales Summary"</string>
    <string name="select_language">Choose your preferred language</string>
    <string name="select_screen_orientation">Select Screen Orientation</string>
    <string name="shop_front">Shop Front</string>
    <string name="smn_code">SMN Code</string>
    <string name="speak_now_to_add_to_cart">Speak Now to Add to Cart</string>
    <string name="support_ticket">Support Ticket</string>
    <string name="take_order">Take Order</string>
    <string name="tl_float">TL/Float Code</string>
    <string name="tl_float_hint">Enter the TL/Float Code</string>
    <string name="to">To</string>
    <string name="training_resources">Training Resource</string>
    <string name="txt_default_language">English</string>
    <string name="txt_select_lang">Continue with %1$s</string>
    <string name="txt_submit">Submit</string>
    <string name="visitor_details">Visitor Details</string>
    <string name="whatsapp">WhatsApp</string>
</resources>