<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_gravity="center"
    android:background="@color/white"
    android:layout_width="300.0dip"
    android:layout_height="190.0dip"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.appcompat.widget.AppCompatTextView
        android:textSize="18.0dip"
        android:textColor="@color/white"
        android:id="@id/title_text"
        android:background="@drawable/side_nav_bar"
        android:padding="10.0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/speak_now_to_add_to_cart"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />
    <ProgressBar
        android:id="@id/progressBar"
        android:layout_width="50.0dip"
        android:layout_height="50.0dip"
        android:layout_marginTop="39.0dip"
        android:indeterminate="true"
        android:layout_below="@id/title_text"
        android:layout_centerHorizontal="true" />
    <androidx.appcompat.widget.AppCompatTextView
        android:textSize="16.0sp"
        android:id="@id/loading_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip"
        android:text="@string/listening"
        android:layout_below="@id/title_text"
        android:layout_centerHorizontal="true" />
    <androidx.appcompat.widget.AppCompatTextView
        android:textSize="16.0sp"
        android:textStyle="bold"
        android:id="@id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/format_to_speak"
        android:layout_below="@id/progressBar"
        android:layout_centerHorizontal="true" />
    <androidx.appcompat.widget.AppCompatTextView
        android:textSize="12.0dip"
        android:gravity="center"
        android:id="@id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/custom_progress_dialog"
        android:layout_below="@id/textView2"
        android:layout_centerHorizontal="true" />
    <androidx.appcompat.widget.AppCompatTextView
        android:textSize="12.0sp"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2.0dip"
        android:text="@string/custom_progress_dialog_example_text"
        android:layout_below="@id/textView3"
        android:layout_centerHorizontal="true" />
</RelativeLayout>