<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:orientation="vertical"
    android:background="@color/color_e6eaf4"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="@dimen/dimen_18">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatTextView
                android:textSize="@dimen/dimen_16sp"
                android:textColor="@color/color_41586f"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dimen_32"
                android:text="@string/me_text"
                android:lineSpacingExtra="8.0sp"
                android:fontFamily="@font/sf_pro_display_regular" />
            <androidx.appcompat.widget.AppCompatTextView
                android:textSize="@dimen/dimen_14sp"
                android:textColor="@color/color_41586f"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_24"
                android:layout_marginBottom="@dimen/dimen_5"
                android:text="@string/smn_code"
                android:fontFamily="@font/sf_pro_display_regular"
                android:lineHeight="@dimen/dimen_21sp" />
            <EditText
                android:textSize="14.0sp"
                android:textColor="@color/color_758da6"
                android:textColorHint="@color/color_758da6"
                android:id="@id/me_id"
                android:background="@drawable/edit_text_white_box_bg"
                android:paddingLeft="@dimen/dimen_10"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/dimen_48"
                android:hint="@string/me_id_hint"
                android:singleLine="true"
                android:maxLength="8"
                android:digits="@string/alloweddigits"
                android:inputType="text"
                android:fontFamily="@font/sf_pro_display_regular" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16.0dip">
            <androidx.appcompat.widget.AppCompatTextView
                android:textSize="@dimen/dimen_14sp"
                android:textColor="@color/color_41586f"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_5"
                android:text="@string/name"
                android:fontFamily="@font/sf_pro_display_regular"
                android:lineHeight="@dimen/dimen_21sp" />
            <EditText
                android:textSize="@dimen/dimen_14sp"
                android:textColorHint="@color/color_758da6"
                android:id="@id/me_name"
                android:background="@drawable/edit_text_white_box_bg"
                android:paddingLeft="@dimen/dimen_10"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/dimen_48"
                android:hint="@string/enter_name"
                android:singleLine="true"
                android:maxLength="50"
                android:digits="@string/alloweddigits"
                android:inputType="textPersonName"
                android:fontFamily="@font/sf_pro_display_regular" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16.0dip">
            <androidx.appcompat.widget.AppCompatTextView
                android:textSize="@dimen/dimen_14sp"
                android:textColor="@color/color_41586f"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_5"
                android:text="@string/tl_float"
                android:fontFamily="@font/sf_pro_display_regular"
                android:lineHeight="@dimen/dimen_21sp" />
            <EditText
                android:textSize="@dimen/dimen_14sp"
                android:textColorHint="@color/color_758da6"
                android:id="@id/tl_float"
                android:background="@drawable/edit_text_white_box_bg"
                android:paddingLeft="@dimen/dimen_10"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/dimen_48"
                android:hint="@string/tl_float_hint"
                android:singleLine="true"
                android:maxLength="50"
                android:digits="@string/alloweddigits"
                android:inputType="textPersonName"
                android:fontFamily="@font/sf_pro_display_regular" />
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <androidx.appcompat.widget.AppCompatTextView
            android:textSize="@dimen/dimen_18sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_gravity="center"
            android:id="@id/btn_submit"
            android:background="@color/color_2392ff"
            android:layout_width="fill_parent"
            android:layout_height="55.0dip"
            android:text="@string/txt_submit"
            android:layout_alignParentBottom="true"
            android:fontFamily="@font/sf_pro_display_bold"
            android:lineHeight="@dimen/dimen_27sp" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>