<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatTextView
            android:textSize="18.0sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:id="@id/from"
            android:background="@color/dark_blue"
            android:layout_width="0.0dip"
            android:layout_height="40.0dip"
            android:text="@string/from"
            android:layout_weight="1.0" />
        <androidx.appcompat.widget.AppCompatTextView
            android:textSize="18.0sp"
            android:gravity="center"
            android:id="@id/to"
            android:layout_width="0.0dip"
            android:layout_height="40.0dip"
            android:text="@string/to"
            android:layout_weight="1.0" />
    </LinearLayout>
    <DatePicker
        android:id="@id/datePicker"
        android:layout_width="fill_parent"
        android:layout_height="400.0dip" />
    <Button
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:id="@id/done"
        android:background="@drawable/mosambee_button_curved_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip"
        android:text="@string/ok" />
</LinearLayout>