<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.appcompat.widget.AppCompatTextView
        android:textColor="@color/black"
        android:gravity="left"
        android:layout_gravity="center"
        android:id="@id/textView4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10.0dip"
        android:layout_marginTop="10.0dip"
        android:text="@string/choose_type_of_reedemption"
        android:fontFamily="@font/sf_pro_display_bold" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10.0dip">
        <Button
            android:textColor="@color/white"
            android:id="@id/btn_current"
            android:background="@drawable/mosambee_button_curved_border"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:text="@string/current_bill"
            android:layout_weight="1.0" />
        <Button
            android:textColor="@color/white"
            android:id="@id/btn_future"
            android:background="@drawable/mosambee_button_blue_curved_border"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:text="@string/next_bill"
            android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>