<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.appcompat.widget.AppCompatTextView
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center"
        android:id="@id/cancel_order"
        android:background="@drawable/red_rounded_corner"
        android:padding="10.0dip"
        android:layout_width="0.0dip"
        android:layout_height="wrap_content"
        android:layout_marginRight="10.0dip"
        android:text="@string/lbl_cancel_order"
        android:layout_weight="1.0" />
    <androidx.appcompat.widget.AppCompatTextView
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center"
        android:id="@id/feedback_order"
        android:background="@drawable/green_rounded_corner"
        android:padding="10.0dip"
        android:layout_width="0.0dip"
        android:layout_height="wrap_content"
        android:layout_marginRight="10.0dip"
        android:text="@string/feedback"
        android:layout_weight="1.0" />
    <androidx.appcompat.widget.AppCompatTextView
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center"
        android:id="@id/reorder_order"
        android:background="@drawable/green_rounded_corner"
        android:padding="10.0dip"
        android:visibility="gone"
        android:layout_width="0.0dip"
        android:layout_height="wrap_content"
        android:text="@string/reorder"
        android:layout_weight="1.0" />
</LinearLayout>